src/styles/elements/_header.css
@layer components {
    .header {
        --header-position: relative;
        --header-min-height: 80vh;
        --header-width: 100%;
        --header-z-index: var(--z-index-content);

        --header-image-height: 100%;
        --header-image-width: 100%;
        --header-image-position: absolute;
        --header-image-top: 0;
        --header-image-left: 0;
        --header-image-width-object-fit: cover;

        --header-content-wrapper-padding: var(--spacing-xxl) var(--spacing-normal);

        position: var(--header-position);
        min-height: var(--header-min-height);
        width: var(--header-width);
        z-index: var(--header-z-index);
        container-name: header;
        container-type: inline-size;
    }

    .topbar + .header {
        --header-margin-top: var(--topbar-height);

        margin-top: var(--header-margin-top) !important;
    }

    .header[image-height="full"] {
        --header-min-height: calc(100vh - var(--topbar-height));
    }

    .header[image-height="half"] {
        --header-min-height: 50vh;
    }

    .header[image-height="quarter"] {
        --header-min-height: 25vh;
    }

    .header[image-height="3-1"] {
        --header-min-height: calc(100 / 3 * 1vw);
    }

    .header[image-height="hero-media"] {
        --header-min-height: auto;
    }

    .header--portfolio-gallery {
        --header-min-height: auto;
    }

    .header__figure {
        height: 100%;
    }

    .header:has(.single-media__video) .header__figure {
        position: absolute;
        top: 0;
        width: 100%;
    }

    .header__image,
    .header__figure .video {
        height: var(--header-image-height);
        width: var(--header-image-width);
        position: var(--header-image-position);
        top: var(--header-image-top);
        left: var(--header-image-left);
        object-fit: var(--header-image-width-object-fit);
    }

    .header .slider .single-media,
    .header .slider .single-media img {
        height: 100%;
        max-height: 100%;
        object-fit: cover;
    }

    .header__content {
        position: relative;
        display: flex;
        min-height: var(--header-min-height);
        padding: var(--header-content-wrapper-padding);
        height: 100%;
        width: 100%;
    }

    @media screen and (width > 840px) {
        .header {
            --header-content-wrapper-padding: var(--spacing-xxl) var(--spacing-l);
        }
    }

    @media screen and (width > 1280px) {
        .header {
            --header-content-wrapper-padding: var(--spacing-xxl);
        }
    }
}

